--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="The Basic Math program" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Mr. Coxall" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <title>The Basic Math program</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">The Basic Math program</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div class="right-image">
+          <img src="./images/basic_math.png" alt="laptop image" />
+        </div>
+        <div class="page-content">This program shows basic math.</div>
+        <br />
+        <!-- basic text -->
+        <div id="add-math">
+          <p>6 + 5 = ?</p>
+        </div>
+        <div id="subtract-math">
+          <p>7 - 3 = ?</p>
+        </div>
+        <div id="multiply-math">
+          <p>3 + 4 × 2 = ?</p>
+        </div>
+        <div id="divide-math">
+          <p>(4 ÷ 2) + 3 = ?</p>
+        </div>
+        <div id="exponent-math">
+          <p>5 + 2³ = ?</p>
+        </div>
+        <br />
+        <!-- Accent-colored raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="doMathClicked()"
+        >
+          Calculate
+        </button>
+      </main>
+    </div>
   </body>
 </html>
